--- a/environment.yaml
+++ b/environment.yaml
@@ -1,16 +1,19 @@
 name: 3d_diffuser_actor
 channels:
   - pytorch
+  - pytorch3d
   - nvidia
   - conda-forge
   - defaults
 dependencies:
   - python=3.8
   - pip
-  - pytorch=1.13.1
-  - torchvision=0.14.1
-  - torchaudio=0.13.1
-  - pytorch-cuda=11.6
+  - pytorch
+  - torchvision
+  - torchaudio
+  - pytorch-cuda
+  - pytorch3d
+  - wandb
   - pip:
     - git+https://github.com/openai/CLIP.git
     - numpy==1.23.5
@@ -38,3 +41,5 @@ dependencies:
     - pandocfilters>=1.4.1
     - tinycss2
     - traitlets>=5.1
+    - pandas
+    - diffusers
