update det scripts

--- a/det_scripts/train_pointattn.yaml
+++ b/det_scripts/train_pointattn.yaml
@@ -46,7 +46,7 @@ resources:
   resource_pool: 42_Compute
   slots_per_trial: 1 # # GPUs
 
-entrypoint: exec bash -c "cd /workspace && source slurm_scripts/startup-hook.sh && bash scripts/train_pointattn.sh"
+entrypoint: exec bash -c "cd /workspace && source scripts/slurm/startup-hook.sh && bash scripts/train/train_pointattn.sh"
 
 searcher:
     name: single
